--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "express": "^4.14.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-router": "^2.6.1"
+    "react-redux": "^4.4.6",
+    "react-router": "^2.6.1",
+    "redux": "^3.6.0",
+    "webpack": "^1.13.3"
   },
   "devDependencies": {
     "babel-core": "^6.13.1",
